# catkin_aote

aote_TimeAPI/: CMakeLists.txt  package.xml
aote_TimeAPI/scripts/: time.py
aote_TimeAPI/src/: time.cpp
aote_action/: CMakeLists.txt  package.xml
aote_action/src/: action01_server.cpp  aote02_client.cpp
aote_dynamic_reconfigure/: CMakeLists.txt  package.xml
aote_dynamic_reconfigure/cfg/: dr.cfg
aote_dynamic_reconfigure/src/: dr01_server.cpp
aote_launch/: CMakeLists.txt  package.xml
aote_launch/launch/: turtle1.launch
aote_param/: CMakeLists.txt  package.xml
aote_param/scripts/: getparam.py  setparam.py
aote_param/src/: demo01_param_set.cpp  demo02_param_get.cpp
aote_plugin/: CMakeLists.txt  package.xml  plus.xml
aote_plugin/include/: dbx_base.h  dbx_plugin.h
aote_plugin/src/: plus.cpp  use_plugin.cpp
aote_server/: CMakeLists.txt  package.xml
aote_server/launch/: democlient.launch  demoserer.launch
aote_server/scripts/: srv01_client.py  srv01_server.py
aote_server/src/: demo01_server.cpp  demo02_client.cpp
aote_server/srv/: Addints.srv
aote_tf01_staric/: CMakeLists.txt  package.xml
aote_tf01_staric/src/: demo01_static_pub.cpp  demo01_static_sub.cpp
aote_tf02_dynamic/: CMakeLists.txt  package.xml
aote_tf02_dynamic/src/: demo01_dynamic_pub.cpp  demo02_dynamic_sub.cpp  demo03_zijiwikpub.cpp  demo04_zijiwiksub.cpp
aote_tf03_duozuobiao/: CMakeLists.txt  package.xml
aote_tf03_duozuobiao/launch/: tfs_c.launch
aote_tf03_duozuobiao/src/: demo01_tfs.cpp
aote_tf04_test/: CMakeLists.txt  package.xml
aote_tf04_test/src/: test01_new_turtle.cpp  test02_pub_turtle.cpp  test03_control_turtle.cpp
aote_topic/: CMakeLists.txt  package.xml
aote_topic/scripts/: dem01_sub.py  demo1_pub.py  msg01_pub.py  msg01_sub.py
aote_topic/src/: jiabinpublish.cpp  jiabinsub.cpp  suscriber.cpp  talker.cpp
aote_urdf_gazebo/: CMakeLists.txt  package.xml
aote_urdf_gazebo/config/: control.yaml
aote_urdf_gazebo/launch/: demo01_hello.launch  demo02_car.launch  demo03_env.launch  demo04_sensor.launch
aote_urdf_gazebo/urdf/: demo01_hello copy.urdf
aote_urdf_gazebo/world/: aruco_floor.world  jiabinaruco.world  mymesh.world  zhengfangxing.world
aote_urdf_gazebo/xacro/: car_include.xacro  demo05_car_base.xacro  demo06_car_camera.xacro  demo07_car_laser.xacro
aote_urdf_rviz/: CMakeLists.txt  package.xml
aote_urdf_rviz/ceshi_urdf/: wr_ls1207de.urdf.xacro  wr_ls_udp.urdf.xacro
aote_urdf_rviz/config/: control.yaml  show_mycar.rviz
aote_urdf_rviz/launch/: car_include.launch  ceshi_urdf.launch  (+8 more)
aoto_practice/: CMakeLists.txt  package.xml
launch01_basis/: CMakeLists.txt  package.xml
nav_demo/: CMakeLists.txt  package.xml
plub_head/: CMakeLists.txt  package.xml
vscode_hello/: CMakeLists.txt  package.xml
(+48 files in other folders)
